# Cluster-eMCOM

./: .gitignore  .gitmodules  pyproject.toml
api/: manage.py  pyproject.toml
api/connection/: admin.py  controllers.py  models.py  schemas.py  tests.py  views.py
api/emcom_cluster/: api.py  asgi.py  settings.py  wsgi.py
api/node/: models.py  schemas.py  tests.py  views.py
connection/: tests.py
connection/migrations/: 0001_initial.py
emcom-front/: package-lock.json  package.json
emcom-front/src/: App.css  App.jsx  index.css
emcom-front/src/components/: AddConnection.jsx  AddStation.jsx  RemoveConnection.jsx  RemoveStation.jsx
emcom-front/src/pages/: AddStation.jsx  Home.jsx  Node.jsx  Stations.jsx
emcom_cluster/: settings.py  urls.py
front/: hugo.toml  package-lock.json  package.json
front-end/: package-lock.json  package.json
front-end/src/: AndroidManifest.xml  App.jsx
front/public/: 404.html  index.html  index.xml  sitemap.xml
front/public/categories/: index.html  index.xml
front/public/categories/page/1/: index.html
front/public/page/1/: index.html
front/public/tags/: index.html  index.xml
front/public/tags/page/1/: index.html
front/public/test/: index.html
front/src/routes/: +page.svelte
front_end_do_mapy/: AndroidManifest.xml  App.tsx  app.json  package-lock.json
node/: controllers.py  models.py  schemas.py  tests.py  views.py
node/migrations/: 0001_initial.py
utils/: models.py
